--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 
 <body>
-    <div id="carousel"></div>
+    <main role="main">
+        <div id="carousel"></div>
+        <script src="./app.js"></script>
+    </main>
 </body>
 
 </html>
