--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <body>
     <main role="main">
+        <div id="loader">Loading...</div>
         <div id="carousel"></div>
         <script src="./app.js"></script>
     </main>
