Carousel build script included in demo page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <main role="main">
         <div id="loader">Loading...</div>
         <div id="carousel"></div>
+        <script src="./build/carousel.min.js"></script>
         <script src="./app.js"></script>
     </main>
 </body>
