--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Carousel Test</title>
     <link href="https://fonts.googleapis.com/css?family=Ropa+Sans" rel="stylesheet">
+    <link href="./src/css/carousel.css" rel="stylesheet">
 </head>
 
 <body>
