--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
+<!-- Carousel demo page -->
+
 <!DOCTYPE html>
 <html>
 
 <head>
     <title>Carousel Test</title>
+    <meta content="width=device-width,initial-scale=1" name="viewport">
     <link href="https://fonts.googleapis.com/css?family=Ropa+Sans" rel="stylesheet">
     <link href="./src/css/carousel.css" rel="stylesheet">
 </head>
